<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textLogin"
        android:layout_width="340dp"
        android:layout_height="66dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="510dp"
        android:hint="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="169dp"
        android:layout_height="42dp"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="634dp"
        android:text="@string/zaloguj_sie"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="284dp"
        android:layout_height="72dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="383dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="325dp"
        android:text="@string/btn_login"
        android:onClick="onClickLoginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="142dp"
        android:layout_height="33dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="248dp"
        android:layout_marginBottom="240dp"
        android:onClick="hidePassword"
        android:text="@string/hide_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="236dp"
        android:layout_height="21dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="55dp"
        android:text="@string/label1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="145dp"
        android:layout_height="30dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="118dp"
        android:text="@string/save_credentialsCheckButton"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="342dp"
        android:layout_height="67dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="29dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>