<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InfoActivity"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_info">

    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:layout_marginBottom="12dp"
        android:text="@string/titleStr"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTitle"
        app:layout_constraintStart_toStartOf="@+id/editTitle" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="247dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/TitleEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="167dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:onClick="deleteDocumentBtn_OnClick"
        android:text="@string/delete_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="324dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:onClick="editDocumentBtn_OnClick"
        android:text="@string/editPasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="247dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/usernameInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="105dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/usernameTextView"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTitle" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="104dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:text="Password:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="247dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="37dp"
        android:layout_height="28dp"
        android:layout_marginTop="12dp"
        android:text="Url:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <EditText
        android:id="@+id/editUrl"
        android:layout_width="308dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="267dp"
        android:layout_height="33dp"
        android:text="date"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUrl"
        app:layout_constraintVertical_bias="0.058" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <Button
        android:id="@+id/copyUser"
        android:layout_width="67dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/ic_content_copy_black_24dp"
        android:onClick="copyUsrBtn_Click"
        android:text=" "
        app:layout_constraintBottom_toBottomOf="@+id/editUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editUsername" />

    <Button
        android:id="@+id/copyPasswd"
        android:layout_width="67dp"
        android:layout_height="53dp"
        android:onClick="copyPasswordBtn_Click"
        android:layout_marginStart="20dp"
        android:background="@drawable/ic_content_copy_black_24dp"
        android:text=" "
        app:layout_constraintBottom_toBottomOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/copyUser"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>